--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,68 +1,45 @@
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+    --primary-bg: #ffffff;
+    --secondry-bg: #f1f1f1;
+    --primary-text: #000000;
+    --custom-border: #d1d1d1;
+    --icon-color:#4a5565;
   }
-  a:hover {
-    color: #747bff;
+  
+  .dark {
+    --primary-bg: #1b1919;
+    --secondry-bg: #353333;
+    --primary-text: #ffffff;
+    --custom-border: #444444;
+    --icon-color:#ffffff;
   }
-  button {
-    background-color: #f9f9f9;
+  
+  /* Utility Classes Using Variables */
+  .primary-bg {
+    background-color: var(--primary-bg);
   }
-}
+  
+  .secondry-bg {
+    background-color: var(--secondry-bg);
+  }
+  
+  .primary-text {
+    color: var(--primary-text);
+  }
+  
+  .placeholder-primary-text::placeholder {
+    color: var(--primary-text);
+    opacity: 0.7;
+  }
+  
+  .custom-border {
+    border: 1px solid var(--custom-border);
+  }
+
+  .icon-color {
+    color: var(--icon-color);
+  }
